# 42_cpp_modules

./: README.md
module00/ex00/: CMakeLists.txt  Makefile  megaphone.cpp
module00/ex01/: CMakeLists.txt  Contact.cpp  Contact.h  Makefile  PhoneBook.cpp  PhoneBook.h  const.h  main.cpp  myAwesomePhonebook  utils.cpp  utils.h
module00/ex02/: Account.cpp  Account.hpp  CMakeLists.txt  Makefile
module01/ex00/: CMakeLists.txt  Makefile  Zombie.cpp  Zombie.h  main.cpp  newZombie.cpp  newZombie.h  randomChump.cpp  randomChump.h
module01/ex01/: CMakeLists.txt  Makefile  Zombie.cpp  Zombie.h  main.cpp  zombieHorde.cpp  zombieHorde.h
module01/ex02/: CMakeLists.txt  Makefile  main.cpp  utils.cpp
module01/ex03/: CMakeLists.txt  HumanA.cpp  HumanA.h  HumanB.cpp  HumanB.h  Makefile  Weapon.cpp  Weapon.h
module01/ex04/: CMakeLists.txt  Makefile  exampleFile  main.cpp  utils.h
module01/ex05/: CMakeLists.txt  Karen.cpp  Karen.h  Makefile  main.cpp
module01/ex06/: CMakeLists.txt  Karen.cpp  Karen.h  Makefile  main.cpp
module02/ex00/: CMakeLists.txt  Fixed.cpp  Fixed.h  Makefile
module02/ex01/: CMakeLists.txt  Fixed.cpp  Fixed.h  Makefile  main.cpp
module02/ex02/: CMakeLists.txt  Fixed.cpp  Fixed.h  Makefile  main.cpp
module03/ex00/: CMakeLists.txt  ClapTrap.cpp  ClapTrap.h  Makefile  main.cpp
module03/ex01/: CMakeLists.txt  ClapTrap.cpp  ClapTrap.h  Makefile  ScavTrap.cpp  ScavTrap.h  main.cpp
module03/ex02/: FragTrap.cpp  (+5 more)
module04/ex00/: CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Makefile  WrongAnimal.cpp  WrongAnimal.h  WrongCat.cpp  WrongCat.h  main.cpp
(+102 files in other folders)
